--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   php_service:
-    container_name: php_
+    container_name: php_simple_db
     build:
       context: './docker/'
     volumes:
